; ModuleID = '/home/carl/AnghaBench/linux/sound/hda/extr_hdmi_chmap.c_hdmi_chmap_cea_alloc_validate_get_type.c'
source_filename = "/home/carl/AnghaBench/linux/sound/hda/extr_hdmi_chmap.c_hdmi_chmap_cea_alloc_validate_get_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdac_chmap = type { i32 }
%struct.hdac_cea_channel_speaker_allocation = type { i32 }

@SNDRV_CTL_TLVT_CHMAP_VAR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hdac_chmap*, %struct.hdac_cea_channel_speaker_allocation*, i32)* @hdmi_chmap_cea_alloc_validate_get_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hdmi_chmap_cea_alloc_validate_get_type(%struct.hdac_chmap* %0, %struct.hdac_cea_channel_speaker_allocation* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.hdac_chmap*, align 8
  %6 = alloca %struct.hdac_cea_channel_speaker_allocation*, align 8
  %7 = alloca i32, align 4
  store %struct.hdac_chmap* %0, %struct.hdac_chmap** %5, align 8
  store %struct.hdac_cea_channel_speaker_allocation* %1, %struct.hdac_cea_channel_speaker_allocation** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.hdac_cea_channel_speaker_allocation*, %struct.hdac_cea_channel_speaker_allocation** %6, align 8
  %9 = getelementptr inbounds %struct.hdac_cea_channel_speaker_allocation, %struct.hdac_cea_channel_speaker_allocation* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %16

14:                                               ; preds = %3
  %15 = load i32, i32* @SNDRV_CTL_TLVT_CHMAP_VAR, align 4
  store i32 %15, i32* %4, align 4
  br label %16

16:                                               ; preds = %14, %13
  %17 = load i32, i32* %4, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
